<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StudyBuddy</string>
    <string name="action_settings">Settings</string>
    <string name="prompt">Pick a class</string>

    <string-array name="class_array">
        <item>(nothing selected)</item>
        <item>Math</item>
        <item>English</item>
        <item>Science</item>
        <item>History</item>
        <item>Foreign Language</item>
        <item>Information Technology</item>
        <item>Business</item>
        <item>Education</item>
    </string-array>

    <string name="title">Butt</string>
    <string name="time">Time:</string>
    <string name="place">Place:</string>
    <string name="description">Description:</string>
    <string name="group_size">Group Size:</string>
    <string name="duration">Duration:</string>
    <string name="attend_button">Attend</string>
    <string name="attend_page">Attend Page Test</string>
    <string name="side_bar_text">Login Goes Here</string>


</resources>
